# R--

./: .gitignore  .pre-commit-config.yaml  .travis.yml  .yo-rc.json  CMakeLists.txt  Makefile  R--  README.md  meson.build  meson_options.txt  pom.xml
.github/workflows/: ci.yaml
_fig/: demo.cast
new/: .gitignore  CMakeLists.txt  README.md  TODO.md  VERSIONS.md
new/src/: ast.hpp  interpreter.cpp  interpreter.hpp  lexer.hpp  parser.cpp  parser.hpp  parsing_exception.hpp  token.hpp  token_category.hpp
new/tests/: test.cpp  test_clazz.cpp
old/src/main/java/net/digital_alexandria/r__/lexer/: Lexer.java  Token.java  TokenCategory.java
old/src/main/java/net/digital_alexandria/r__/operators/: Arithmetic.java
old/src/main/java/net/digital_alexandria/r__/parser/: AbstractSyntaxSubtree.java  Parser.java
old/src/test/java/net/digital_alexandria/tests/: ArithmeticTest.java  TestSuite.java
src/: arithmetic.cpp  arithmetic.hpp  ast.hpp  binary.hpp  interpreter.cpp  interpreter.hpp  lexer.cpp  lexer.hpp  main.cpp  meson.build  node.hpp  number_node.hpp  parser.cpp  parser.hpp  parsing_exception.hpp  token.hpp  token_category.hpp  unary.hpp
src/main/java/net/digital_alexandria/R__/: Interpreter.java  Lexer.java  Main.java  Operation.java  Parser.java  ParsingException.java  Token.java  TokenCategory.java
src/main/java/net/digital_alexandria/R__/interpreter/: DepthFirstSearch.java
src/main/java/net/digital_alexandria/R__/parser/: ASTNode.java  AbstractSyntaxSubtree.java  AbstractSyntaxTree.java  Binary.java  BinaryOperationNode.java  NumberNode.java  Parser.java  Unary.java
src/main/java/net/digital_alexandria/r__/exceptions/: ParsingException.java
src/main/java/net/digital_alexandria/r__/interpreter/: Interpreter.java
src/main/java/net/digital_alexandria/r__/lexer/: Lexer.java  Token.java  TokenCategory.java
src/main/java/net/digital_alexandria/r__/operators/: Arithmetic.java
src/test/java/net/digital_alexandria/r__/parser/: BinaryOperationNodeTest.java
src/test/java/net/digital_alexandria/tests/: ArithmeticTest.java  OperationTest.java  TestSuite.java
